--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,3 +39,12 @@
 .inputincome {
     padding-left: 15px;
 }
+
+
+.form {
+    border-style: solid;
+    border-radius: 20px;
+    border-width: 1px;
+    padding: 35px 35px 50px 35px;
+    background-color: var(--supplementary-dark);
+}
