--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 
 
@@ -15,9 +15,14 @@
   html, body {
       height: 100%;
   }
+
+  h1, h2, h3, h4, h5, h6 {
+      font-family: "Roboto+Condensed", sans-serif;
+  }
+
   
   body {
-      font-family: Roboto, sans-serif;
+      font-family: "Roboto", sans-serif;
       font-weight: 300;
       display: flex;
       flex-direction: column;
@@ -26,6 +31,14 @@
 
 .content {
     flex: 1 0 auto;
+}
+
+/* ------------------------- HEADER TITLE --------------------------- */
+
+.header-title {
+    font-family: "Roboto+Condensed", sans-serif;
+    text-transform: uppercase;
+    text-align: center;
 }
 
 /* ------------------------- INPUT FORM --------------------------- */
@@ -45,9 +58,14 @@
 }
 
 .resetbutton {
-    padding-top: 15px;
+    padding-top: 12px;
     color: var(--background-blue);
     text-align: center;
+    font-size: 15px;
+}
+
+.resetbutton:hover {
+    color: var(--secondary-color);
 }
 
 
