--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,18 @@
     color: var(--secondary-color);
 }
 
+/* ------------------------- RESULTS SECTION --------------------------- */
+
+.resultssection {
+    border-style: solid;
+    border-radius: 5px;
+    border-width: 1px;
+    padding: 35px 35px 35px 35px;
+    background-color: var(--background-blue);
+    text-align: center;
+    margin: 10px;
+    display: none;
+}
 
 /* ------------------------- FOOTER --------------------------- */
 
