--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,6 +57,24 @@
     font-size: 18px;
 }
 
+.questionpopover {
+    font-size: 18px;
+    height: 25px;
+    width: 25px;
+    background-color: var(--secondary-color);
+    border-radius: 50%;
+    display: inline-block;
+    text-align: center;
+    color: var(--primary-color);
+    font-weight: 700;
+}
+
+.questionpopover:hover {
+    text-decoration: none;
+    color: var(--supplementary-dark);
+
+}
+
 .resetbutton {
     padding-top: 12px;
     color: var(--background-blue);
