--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,6 +81,12 @@
     font-size: 15px;
 }
 
+.resetbuttonmodal {
+    color: var(--background-blue);
+    text-align: center;
+    font-size: 15px;
+}
+
 .resetbutton:hover {
     color: var(--secondary-color);
 }
