fix send results feature that allows personalised results to be sent via emailJS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,6 +103,11 @@
     color: #000000;
 }
 
+.resultssection h4 {
+    color: var(--primary-color);
+    font-weight: 900;
+}
+
 /* ------------------------- FOOTER --------------------------- */
 
 footer {
