--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,8 @@
     padding: 15px 15px 15px 15px;
     margin-top: 15px;
     border-radius: 5px;
+    text-decoration-line: none;
+    text-decoration: none;
 }
 
 .faq a {
@@ -47,6 +49,8 @@
     font-size: 25px;
     margin: 0;
     line-height: 1em;
+    text-decoration-line: none;
+    text-decoration: none;
 
 }
 
