--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 :root {
     --primary-color: #3A3A44;
     --secondary-color: #CF9D3F;
-    --third-color: #D7AF4D;
+    --third-color: #DDBC69;
     --supplementary-dark: #D6D9E1;
     --background-blue: #EEF5F7;
   }
@@ -16,12 +16,12 @@
   }
 
   h1, h2, h3, h4, h5, h6 {
-      font-family: "Poppins", sans-serif;
+      font-family: 'Poppins', sans-serif;
   }
 
   
   body {
-      font-family: "Roboto", sans-serif;
+      font-family: 'Roboto+Condensed', sans-serif;
       font-weight: 300;
       display: flex;
       flex-direction: column;
@@ -32,10 +32,27 @@
     flex: 1 0 auto;
 }
 
+.btn-primary {
+    color: #ffff;
+    background-color: #0063CC !important;
+    border-color: #0063CC !important;
+    font-weight: 400;
+    font-size: 22px;
+    font-family: 'Roboto+Condensed', sans-serif;
+    letter-spacing: 2px;
+}
+
+
 /* ------------------------- HEADER TITLE --------------------------- */
 
+.logo img {
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
+}
+
 .faq {
-    background-color: var(--secondary-color);
+    background-color: var(--supplementary-dark);
     padding: 15px 15px 15px 15px;
     margin-top: 15px;
     border-radius: 5px;
@@ -121,7 +138,7 @@
 .resultssection h4 {
     color: #000000;
     font-size: 28px;
-    font-weight: 900;
+    font-weight: 700;
 }
 
 /* ------------------------- SHARE RESULTS MODAL SECTION --------------------------- */
