added README documentation about AAA compliant verification

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@
     --third-color: #DDBC69;
     --supplementary-dark: #D6D9E1;
     --background-blue: #EEF5F7;
+    --faq-button: #C2DEFF;
   }
   
   
